--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
         >カスタム</a
       >
     </div>
+
+    <script type="text/javascript">
+      LineIt.loadButton();
+    </script>
   </body>
 </html>
